--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ button {
 .display {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 50px;
 }
 
@@ -55,4 +56,12 @@ button {
     display: flex;
     justify-content: space-around;
     gap: 50px;
+}
+
+#user-container,
+#computer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
